fix height for overflow on y axis

--- a/src/css/devices/devices.less
+++ b/src/css/devices/devices.less
@@ -282,7 +282,6 @@
 
   .table-topScrollbar{
     overflow-x:auto;
-    height: 20px;
     > div{
       height: 20px;
     }
